--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
 
     <main>
         <section>
+            <div id="loader" style="height: 200px;" class="d-flex justify-content-center align-items-center d-none">
+                <div class="spinner-border text-success" role="status">
+                  <span class="visually-hidden">Loading...</span>
+                </div>
+              </div>
             <div id="ai-container" class="row row-cols-1 row-cols-md-3 g-4">
               </div>
         </section>
