--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
             <div id="ai-container" class="row row-cols-1 row-cols-md-3 g-4">
               </div>
         </section>
+        <section>
+            <div class="d-flex justify-content-center align-items-center mt-5">
+                <button id="see-more-btn" class="btn btn-danger mb-5 d-none">See More</button>
+            </div>
+        </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <script src="app.js"></script>
