dynamic description and features are added in modal

--- a/index.html
+++ b/index.html
@@ -31,56 +31,15 @@
             </div>
         </section>
         <!-- modal section  -->
-        <section> 
-  <!-- Modal -->
+        <section>
+            <!-- Modal -->
   <div class="modal fade" id="aiUniverse" tabindex="-1" aria-labelledby="aiUniverseLabel" aria-hidden="true">
     <div class="modal-dialog modal-xl">
       <div class="modal-content">
         <div class="container d-flex justify-content-end mt-3">
           <button type="button" class="btn-close btn btn-danger" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
-        <div class="modal-body">
-            <div class="row mx-3 p-5">
-                <div class="col rounded-3 bg-danger-subtle border border-danger me-2 me-md-3">
-                    <h3 class="my-3">Modal heading goes here</h3>
-          <div class="row mx-1 mb-3">
-            <div class="col border me-3 rounded-3 bg-white d-flex justify-content-center align-items-center p-2">
-                <p><span>$10</span>/<br>month <br> Basic</p>
-            </div>
-            <div class="col border me-3 rounded-3 bg-white d-flex justify-content-center align-items-center p-2">
-                <p><span>$15</span>/<br>month <br>Pro</p>
-            </div>
-            <div class="col border me-3 rounded-3 bg-white d-flex justify-content-center align-items-center p-2">
-                <p><span>$15</span><br>Enterprise</p>
-            </div>
-          </div>
-          <div class="row  mx-3 mx-auto mb-3">
-            <div class="col">
-                <h4>Features</h4>
-                <ul>
-                    <li>1</li>
-                    <li>2</li>
-                    <li>3</li>
-                </ul>
-            </div>
-            <div class="col">
-                <h4>Integration</h4>
-                <ul>
-                    <li>1</li>
-                    <li>2</li>
-                    <li>3</li>
-                </ul>
-            </div>
-          </div>
-                </div>
-                <div class="col rounded-3 border border-dark-subtle">
-                    <div>
-                        <img src="..." alt="">
-                    </div>
-                    <h4>hello</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, inventore!</p>
-                </div>
-            </div>
+        <div id="ai-universe-modal" class="modal-body">
         </div>
       </div>
     </div>
