sort by date added for the card

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <h1 class="text-center fw-bold p-3">AI Universe Hub</h1>
         <div class="d-flex justify-content-center align-items-center">
-            <button class="btn btn-danger mb-5">Sort By Date</button>
+            <button id="sort-card-btn" class="btn btn-danger mb-5">Sort By Date</button>
         </div>
     </header>
 
@@ -27,7 +27,7 @@
         </section>
         <section>
             <div class="d-flex justify-content-center align-items-center mt-5">
-                <button id="see-more-btn" class="btn btn-danger mb-5 d-none">See More</button>
+                <button id="see-more-btn" onclick="displaySorted()" class="btn btn-danger mb-5 d-none">See More</button>
             </div>
         </section>
         <!-- modal section  -->
